# maximum-independent-set-parallel

./: .travis.yml  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml  finder.cpp  finder.h  finder_brute.cpp  finder_brute.h  finder_greedy.cpp  finder_greedy.h  graph.cpp  graph.h  graphboost.cpp  graphboost.h  graphmatrix.cpp  graphmatrix.h  main.cpp  maximum-independent-set-parallel.pro
src/: CMakeLists.txt  finder.h  finder_brute.cpp  finder_brute.h  finder_greedy.cpp  finder_greedy.h  graph.cpp  main.cpp  visit_variant.h
test/: CMakeLists.txt  test_algo.cpp  test_algo.h
